--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: java
+sudo: false # faster builds
 
 before_install:
+ - pip install --user codecov
  - chmod +x gradlew
+
+after_success:
+ - codecov
