--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,18 @@ sudo: false # faster builds
 
 before_install:
  - pip install --user codecov
+ - pip install heroku
  - chmod +x gradlew
 
 after_success:
  - ./gradlew jacocoTestReport 
  - bash <(curl -s https://codecov.io/bash)
+
+before_deploy :
+ - ./gradlew -Pprod bootRepackage -x test
+ 
+deploy:
+  provider: heroku
+  app: jador
+  api_key:
+    secure: "55309de3-ef78-4235-8593-0c2a0dbe4c43"
