--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,46 @@
-language: java
-sudo: false # faster builds
-
+os:
+  - linux
+services:
+  - docker
+language: node_js
+node_js:
+  - "8.9.1"
+jdk:
+  - oraclejdk8
+sudo: false
+cache:
+  directories:
+    - node
+    - node_modules
+    - $HOME/.gradle
+    - $HOME/.yarn-cache
+env:
+  global:
+    - NODE_VERSION=8.9.1
+    - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
+    - SPRING_JPA_SHOW_SQL=false
 before_install:
- - chmod +x gradlew
-
+  - jdk_switcher use oraclejdk8
+  - java -version
+  - sudo /etc/init.d/mysql stop
+  - sudo /etc/init.d/postgresql stop
+  - chmod +x gradlew
+  # Repo for Yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+install:
+  - yarn install
+script:
+  - chmod +x gradlew
+  - ./gradlew clean test
+  - yarn test
+  - ./gradlew bootRepackage -Pprod -x test
+  - ./gradlew deployHeroku
+notifications:
+  webhooks:
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
 after_success:
  - ./gradlew jacocoTestReport 
  - bash <(curl -s https://codecov.io/bash)
-
-before_deploy :
- - ./gradlew -Pprod bootRepackage -x test
- 
-deploy:
-  provider: heroku
-  app: jador
-  run: heroku deploy:jar --jar build/libs/*war
-  api_key:
-    secure: "55309de3-ef78-4235-8593-0c2a0dbe4c43"
