--- a/gradle/heroku.gradle
+++ b/gradle/heroku.gradle
@@ -2,5 +2,6 @@ apply plugin: 'com.heroku.sdk.heroku-gradle'
 
 heroku {
   appName = "jador"
+   apiKey = "55309de3-ef78-4235-8593-0c2a0dbe4c43"
 }
 
