--- a/src/main/resources/config/application-heroku.yml
+++ b/src/main/resources/config/application-heroku.yml
@@ -21,9 +21,19 @@ eureka:
 
 spring:
     datasource:
-        type: com.zaxxer.hikari.HikariDataSource        
+        type: com.zaxxer.hikari.HikariDataSource
         url: ${JDBC_DATABASE_URL}
         username: ${JDBC_DATABASE_USERNAME}
         password: ${JDBC_DATABASE_PASSWORD}
         hikari:
             maximumPoolSize: 8
+
+mail:
+    host: smtp.sendgrid.net
+    port: 587
+    username: ${SENDGRID_USERNAME}
+    password: ${SENDGRID_PASSWORD}
+    protocol: smtp
+    tls: false
+    auth: true
+    from: jador@jador.heroku.com
