--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "proxy-middleware": "0.15.0",
     "rimraf": "2.6.1",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
+    "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.18.2",
     "to-string-loader": "1.1.5",
     "tslint": "5.5.0",
